Update PGP key.

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,6 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v1.4.3-cvs (GNU/Linux)
 Comment: This 0xB565716F key is used to sign releases of GNU SASL.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
@@ -14,11 +13,11 @@ T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
 6bcDSBBDMRkHIX6/kH/vnevjqivIld+j8WTcVX+SArcKyzgQ58uMTrfQdLqzh6D9
 sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0JVNpbW9uIEpvc2Vmc3NvbiA8
 c2ltb25Aam9zZWZzc29uLm9yZz6I+wQTAQIARQIbAwQLBwMCAxUCAwMWAgECHgEC
-F4AiGGRuczpzaW1vbi5qb3NlZnNzb24ub3JnP3R5cGU9Q0VSVAUCQkBc0AUJBlij
-pAAKCRDtoh6UtWVxb9EIBP4pk/ztQF+XV5L4krXEmbjAsGb9C+I+4OoRUY/mWDvN
-AjGppkhFD+8Q3oQvg+1dcPsJ5rQHSXgA2w1bOsTknK9DamyY35LHd9T0ZSllXOUX
-9q3QeKiDBYc2KB35ZtxKNIA4Lt5qDgYbSgtlERxDY94BCSy4YApdwATei3O32t5I
-oR+BroeIr+w+zn9mVulkn3pRXByYDX/scxcTtWwRL+UNiEYEExECAAYFAj1Y8sIA
+F4AiGGRuczpzaW1vbi5qb3NlZnNzb24ub3JnP3R5cGU9Q0VSVAUCQxWs0QUJBy9F
+JgAKCRDtoh6UtWVxb5qGBQCdY5EfmnoJ2T/OF6fixTDCfOwXIA5nu9pU+tA+rnwL
+OXYXKYubmQmCwZcfxvoovFUyjyGNNmeyb7M7pdMteyecrudeTvSAEnQAAzRcaUbn
+eoO+9CardGR8Uwe5KbEv7MvyldOafLAiUSmAMc9Ups8oXdznTwcUQ8oWcOO7JHA+
+CreraaEL+phgFG/D2GON5EKoNN0LnAe5YvOzkwIt4b7diEYEExECAAYFAj1Y8sIA
 CgkQV5Mp08AbKiJmNwCgkgjjuS5TcZq4rVBWNYu1VwQlJWYAoJZf+pBNBvzT9xOg
 Hcs1cAMwT4FHiEwEExECAAwFAj1esHUFgwFXijYACgkQvLvElXGKklZXlwCfTWSl
 L2/3q5Od3zBVMKVHgpTo4asAnAtw7vVEIwp9pPuy1oKjTB/obqltiEYEExECAAYF
@@ -84,11 +83,11 @@ dCJHLDv+cjtybnVs82Aeq9UKJgkgAAProq7LScFbQVrAgOeIRgQQEQIABgUCQvJK
 Y/QThvvWMWqJtjmITAQTEQIADAUCQvHAcAWDADvqXwAKCRApqihSMz58Iws7AJoC
 MHdbiQtimt2yIEwibpBYwnHVkQCeOz9rSyhHL2rbj55z08lmLlxkwai0IVNpbW9u
 IEpvc2Vmc3NvbiA8amFzQGV4dHVuZG8uY29tPoj7BBMBAgBFAhsDBAsHAwIDFQID
-AxYCAQIeAQIXgCIYZG5zOnNpbW9uLmpvc2Vmc3Nvbi5vcmc/dHlwZT1DRVJUBQJC
-QFzPBQkGWKOkAAoJEO2iHpS1ZXFvLfME+QHcoVJUM3FqCzf/d+JhZvM5O0wtZ5qB
-xO793rsE7psgAcHVIe5f87QZNtDp7ZmrnugyBhC67H2FrQKr8lqsIvKbaSzjro8y
-UoQtswVSef/OrhqSgEqs08Aifa66sowT1ZWO181m4BCC7aoNRovx8Huy0P+Y1Z2b
-tPA+uu6UvZLh2iKqMP+95zloNHNHZWooG5THFQl0RdCJtybyDmLpn+uIRgQTEQIA
+AxYCAQIeAQIXgCIYZG5zOnNpbW9uLmpvc2Vmc3Nvbi5vcmc/dHlwZT1DRVJUBQJD
+FazSBQkHL0UmAAoJEO2iHpS1ZXFv+CkE/iKshcx+BSBC2d5EK24Dww6sBDPNF4P5
+mqLCMfa2VbGeWZffVQlGgJeLfTt2mtIAGRoCyaUazWjj206K41Of7G0ZVFeCyfPy
+jBtKFlwNLrjMWz7kAGtLtXF/bKns4Mr3lB8KXJKiOTj5uFI9m+b5emAMDXJyQG3D
+na/WRcegpI+urrnR0PdZhYBvYPPY6ggctLsXtfL3E/bes1XLsyLWzSOIRgQTEQIA
 BgUCPVjyvwAKCRBXkynTwBsqIhf3AJ9HasyJd0rNkH3lpwDlhJDgwtDLKACfU2/s
 zfpICh9H/vdaOqU+lUBD59GITAQTEQIADAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqS
 VhmdAJ45cjOYShnnI5U3KCmFiZTA439LwgCffaBYPJpMymrINwkRB4t2NxbtuhKI
@@ -158,12 +157,12 @@ V0rKw/0Anj3miI06v5jOKbRJt6wwLINA7N6RAJ9pdfC+4JZ+SMq0w9cO3NKGEsJ1
 QUOVftQI4H29pEXGtf503uXpA747QyDt1V2Mi0SdppiQn6vgtd5wjjseiCxQYTFF
 0NgZPQOrtpnwaQLhQo9dzerYpZDeJvfCPeqcIabchf8jbj3J1gsDNDJaoxbT3AsH
 m/GE+LjKN63gVMZaa1hSUbMNvv7pVmKVhFO3LS+EUXhxVeU7ZH6+A/EUy9RzujxY
-YOdDeLJYCLORAAYpiMUEGAECAA8CGwwFAkJAXPYFCQZYo3sACgkQ7aIelLVlcW8E
-ywT7BopB1iV2DF3ZTKKeuI7QSYYABX2OLRxQ3C/t/dpnUsj6BlAy9HTF7QYRI6QJ
-MEvxhvmQbURYoFTfWvuLXi5yV5MuDnyzpNlLaFR3fE2zUWEvp7icp6d2r/RTVhJj
-JvQjsPmlm/UAcOQ8bFZq4x7224Cg/TrapuElkoRPBVkS82Ji8qe5Np7XUrNVqQ2/
-XJC7EZafff382E7S1s4z23Bmyg==
-=1tWK
+YOdDeLJYCLORAAYpiMUEGAECAA8CGwwFAkMVrOQFCQcvROkACgkQ7aIelLVlcW9H
+6gT/TA12FFAeS7dEJWZIAI8vW7wKgEzswHh2pwZlK1l7QiurLavZdnEJlmreJyoN
+HHvY9rdXD1se1mkdmWDKnjKe/2ZN71a3te8Kgjb1p5guBaiwKUfCFdya87Fta4YL
+mZ4DNiZ9yAyG4vLySvz1e4SmU6EoIL8vtYzhTnRQd/VkXHsQx31UTF0sOVJVq00e
++oswIs6WpYg/0by6t54vjRxjNw==
+=4AxN
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
