--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
+URL: http://josefsson.org/key.txt
 Comment: This 0xB565716F key is used to sign releases of GNU SASL.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
