--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,13 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
 See the end for copying conditions.
 
+* Version 0.2.11 (unreleased)
+
+** Fix memory leaks.
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 0.2.10 (released 2005-10-23)
 
 ** Improve configure checks for libidn, libntlm, libgss and libshishi presence.
