--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.11 (unreleased)
 
+** Update of gnulib files.
+
 * Version 0.2.10 (released 2005-10-23)
 
 ** Work around bug in GnuTLS that made the command line tool exit after
