--- a/lib/NEWS
+++ b/lib/NEWS
@@ -6,6 +6,8 @@ See the end for copying conditions.
 
 ** Fix memory leaks.
 
+** Update of gnulib files.
+
 ** API and ABI modifications.
 No changes since last version.
 
