--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,7 +4,7 @@ See the end for copying conditions.
 
 * Version 0.2.11 (unreleased)
 
-** Fix memory leaks.
+** Fix memory leak in gsasl_simple_getpass.
 
 ** Update of gnulib files.
 
