--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 GNU SASL NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
 See the end for copying conditions.
 
 Note that changes to the GNU SASL Library is documented in lib/NEWS.
@@ -7,6 +7,10 @@ This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.11 (unreleased)
+
+** Ported to Windows by cross-compiling using Mingw32.
+Using Debian's mingw32 compiler, you can build it for Windows by invoking
+`./configure --host=i586-mingw32msvc --disable-gssapi'.
 
 ** Update of gnulib files.
 
