--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,21 +5,21 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gsasl 0.1.4\n"
+"Project-Id-Version: gsasl 0.2.8-b20050829\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2005-10-23 20:36+0200\n"
-"PO-Revision-Date: 2004-10-23 02:02+0800\n"
+"POT-Creation-Date: 2005-08-29 01:49+0200\n"
+"PO-Revision-Date: 2005-12-04 03:48+0800\n"
 "Last-Translator: Meng Jie <zuxyhere@eastday.com>\n"
 "Language-Team: Chinese (simplified) <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Choose SASL mechanism:\n"
 msgstr "选择 SASL 机制：\n"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Input list of SASL mechanisms supported by server:\n"
 msgstr "输入服务器所支持的 SASL 机制：\n"
 
@@ -40,23 +40,25 @@ msgid ""
 "missing argument\n"
 "Try `%s --help' for more information."
 msgstr ""
+"缺少参数\n"
+"尝试‘%s --help’以获得更多信息。"
 
 msgid "need both --x509-cert-file and --x509-key-file"
-msgstr ""
+msgstr "既需要 --x509-cert-file 也需要 --x509-key-file"
 
 msgid "cannot use both --starttls and --no-starttls"
-msgstr ""
+msgstr "不能同时使用 --starttls 和 --no-starttls"
 
 msgid "cannot use both --smtp and --imap"
-msgstr ""
+msgstr "不能同时使用 --smtp 和 --imap"
 
 #, c-format
 msgid "initialization failure: %s"
-msgstr ""
+msgstr "初始化失败：%s"
 
-#, fuzzy, c-format
+#, c-format
 msgid "error listing mechanisms: %s"
-msgstr "使用机制：\n"
+msgstr "列出机制时出错：%s"
 
 #, c-format
 msgid "This client supports the following mechanisms:\n"
@@ -68,68 +70,67 @@ msgstr "这个服务器支持以下机制：\n"
 
 #, c-format
 msgid "GnuTLS global initialization failed: %s"
-msgstr ""
+msgstr "GnuTLS 全局初始化失败：%s"
 
 #, c-format
 msgid "GnuTLS initialization failed: %s"
-msgstr ""
+msgstr "GnuTLS 初始化失败：%s"
 
 #, c-format
 msgid "setting GnuTLS defaults failed: %s"
-msgstr ""
+msgstr "设定 GnuTLS 默认值失败：%s"
 
 #, c-format
 msgid "allocating anonymous GnuTLS credential: %s"
-msgstr ""
+msgstr "分配匿名 GnuTLS 信任状：%s"
 
 #, c-format
 msgid "setting anonymous GnuTLS credential: %s"
-msgstr ""
+msgstr "设定匿名 GnuTLS 信任状：%s"
 
 #, c-format
 msgid "allocating X.509 GnuTLS credential: %s"
-msgstr ""
+msgstr "分配 X.509 GnuTLS 信任状：%s"
 
 #, c-format
 msgid "loading X.509 GnuTLS credential: %s"
-msgstr ""
+msgstr "载入 X.509 GnuTLS 信任状：%s"
 
 #, c-format
 msgid "no X.509 CAs found: %s"
-msgstr ""
+msgstr "找不到 X.509 CA：%s"
 
 msgid "no X.509 CAs found"
-msgstr ""
+msgstr "找不到 X.509 CA"
 
 #, c-format
 msgid "setting X.509 GnuTLS credential: %s"
-msgstr ""
+msgstr "设定 X.509 GnuTLS 信任状：%s"
 
 #, c-format
 msgid "setting GnuTLS key exchange priority: %s"
-msgstr ""
+msgstr "设定 GnuTLS 密钥交换优先级：%s"
 
 #, c-format
 msgid "GnuTLS handshake failed: %s"
-msgstr ""
+msgstr "GnuTLS 握手失败：%s"
 
 #, c-format
 msgid "verifying peer certificate: %s"
-msgstr ""
+msgstr "验证节点证书：%s"
 
-#, fuzzy
 msgid "server certificate is not trusted"
-msgstr "服务器认证完成(客户端可信)……\n"
+msgstr "服务器证书不可信"
 
 msgid "server certificate hasn't got a known issuer"
-msgstr ""
+msgstr "服务器证书发行者未知"
 
 msgid "server certificate has been revoked"
-msgstr ""
+msgstr "服务器证书已被吊销"
 
 #, c-format
 msgid "could not verify server certificate (rc=%d)"
-msgstr ""
+msgstr "无法验证服务器证书(rc=%d)"
 
 #, c-format
 msgid "Cannot find mechanism...\n"
@@ -137,7 +138,7 @@ msgstr "找不到机制……\n"
 
 #, c-format
 msgid "mechanism unavailable: %s"
-msgstr ""
+msgstr "机制不可用：%s"
 
 #, c-format
 msgid "Enter base64 authentication data from client (press RET if none):\n"
@@ -149,7 +150,7 @@ msgstr "输入服务器发送的 base64 编码的应用程序数据(如果没有
 
 #, c-format
 msgid "mechanism error: %s"
-msgstr ""
+msgstr "机制错误：%s"
 
 #, c-format
 msgid "Server authentication finished (client trusted)...\n"
@@ -169,7 +170,7 @@ msgstr "要发送的 Base64 编码的应用程序数据：\n"
 
 #, c-format
 msgid "encoding error: %s"
-msgstr ""
+msgstr "编码错误：%s"
 
 #, c-format
 msgid "Session finished...\n"
@@ -177,7 +178,4 @@ msgstr "会话结束……\n"
 
 #, c-format
 msgid "terminating GnuTLS session failed: %s"
-msgstr ""
-
-#~ msgid "Libgsasl error (%d): %s"
-#~ msgstr "Libgsasl 出错(%d)：%s"
+msgstr "终止 GnuTLS 会话失败：%s"
