--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.11 (unreleased)
+* Version 0.2.11 (released 2006-02-07)
 
 ** Ported to Windows by cross-compiling using Mingw32.
 Using Debian's mingw32 compiler, you can build it for Windows by invoking
