--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
 See the end for copying conditions.
 
-* Version 0.2.11 (unreleased)
+* Version 0.2.11 (released 2006-02-07)
 
 ** Ported to Windows by cross-compiling using Mingw32.
 Using Debian's mingw32 compiler, you can build it for Windows by invoking
