--- a/lib/po/nl.po
+++ b/lib/po/nl.po
@@ -1,17 +1,17 @@
 # Dutch translation of libgsasl.
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004, 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the libgsasl package.
-# Elros Cyriatan <cyriatan@fastmail.fm>, 2004.
+# Taco Witte <tcwitte@cs.uu.nl>, 2004-2006.
 # 
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: libgsasl 0.1.0\n"
+"Project-Id-Version: libgsasl 0.2.8-b20050829\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2006-02-07 11:34+0100\n"
-"PO-Revision-Date: 2004-05-15 16:01+0200\n"
-"Last-Translator: Elros Cyriatan <cyriatan@fastmail.fm>\n"
-"Language-Team: Dutch <vertaling@nl.linux.org>\n"
+"POT-Creation-Date: 2005-08-29 01:49+0200\n"
+"PO-Revision-Date: 2006-02-07 18:59+0200\n"
+"Last-Translator: Taco Witte <tcwitte@cs.uu.nl>\n"
+"Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,7 +19,6 @@ msgstr ""
 msgid "Libgsasl success"
 msgstr "Libgsasl succes"
 
-#, fuzzy
 msgid "SASL mechanism needs more data"
 msgstr "SASL-methode vereist meer gegevens"
 
@@ -35,84 +34,39 @@ msgstr "Geheugentoewijzingsfout in SASL-bibliotheek"
 msgid "Base 64 coding error in SASL library"
 msgstr "Base64 coderingsfout in SASL-bibliotheek"
 
-#, fuzzy
 msgid "Low-level crypto error in SASL library"
-msgstr "Gcrypt fout in SASL-bibliotheek"
+msgstr "Cryptografiefout op laag niveau in SASL-bibliotheek"
 
-msgid ""
-"GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
-"library.  This is a serious internal error."
-msgstr ""
-"GSSAPI-bibliotheek kon geheugen niet vrijgeven in gss_release_buffer() in "
-"SASL-bibliotheek.  Dit is een serieuze interne fout."
+msgid "GSSAPI library could not deallocate memory in gss_release_buffer() in SASL library.  This is a serious internal error."
+msgstr "GSSAPI-bibliotheek kon geheugen niet vrijgeven in gss_release_buffer() in SASL-bibliotheek.  Dit is een serieuze interne fout."
 
-msgid ""
-"GSSAPI library could not understand a peer name in gss_import_name() in SASL "
-"library.  This may be due to incorrect user supplied data."
-msgstr ""
-"GSSAPI-bibliotheek begreep de naam van een ander niet in gss_import_name() "
-"in SASL-bibliotheek.  Dit kan komen door ongeldige gegevens opgegeven door "
-"de gebruiker."
+msgid "GSSAPI library could not understand a peer name in gss_import_name() in SASL library.  This may be due to incorrect user supplied data."
+msgstr "GSSAPI-bibliotheek begreep de naam van een ander niet in gss_import_name() in SASL-bibliotheek.  Dit kan komen door ongeldige gegevens opgegeven door de gebruiker."
 
-msgid ""
-"GSSAPI error in client while negotiating security context in "
-"gss_init_sec_context() in SASL library.  This is most likely due "
-"insufficient credentials or malicious interactions."
-msgstr ""
-"GSSAPI fout in client bij onderhandelen over veiligheidscontext in "
-"gss_init_sec_context() in SASL-bibliotheek.  Dit komt waarschijnlijk door "
-"onvoldoende identificatiegegevens of onjuiste gegevensuitwisselingen."
+msgid "GSSAPI error in client while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
+msgstr "GSSAPI fout in client bij onderhandelen over veiligheidscontext in gss_init_sec_context() in SASL-bibliotheek.  Dit komt waarschijnlijk door onvoldoende identificatiegegevens of onjuiste gegevensuitwisselingen."
 
-msgid ""
-"GSSAPI error in server while negotiating security context in "
-"gss_init_sec_context() in SASL library.  This is most likely due "
-"insufficient credentials or malicious interactions."
-msgstr ""
-"GSSAPI fout in server bij onderhandelen over veiligheidscontext in "
-"gss_init_sec_context() in SASL-bibliotheek.  Dit komt waarschijnlijk door "
-"onvoldoende identificatiegegevens of onjuiste gegevensuitwisselingen."
+msgid "GSSAPI error in server while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
+msgstr "GSSAPI fout in server bij onderhandelen over veiligheidscontext in gss_init_sec_context() in SASL-bibliotheek.  Dit komt waarschijnlijk door onvoldoende identificatiegegevens of onjuiste gegevensuitwisselingen."
 
-msgid ""
-"GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
-"library.  This is most likely due to data corruption."
-msgstr ""
-"GSSAPI fout bij decoderen van gegevens in gss_unwrap() in SASL-bibliotheek.  "
-"Dit komt waarschijnlijk door beschadigde gegevens."
+msgid "GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL library.  This is most likely due to data corruption."
+msgstr "GSSAPI fout bij decoderen van gegevens in gss_unwrap() in SASL-bibliotheek.  Dit komt waarschijnlijk door beschadigde gegevens."
 
-msgid ""
-"GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
-msgstr ""
-"GSSAPI fout bij coderen van gegevens in gss_wrap() in SASL-bibliotheek."
+msgid "GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
+msgstr "GSSAPI fout bij coderen van gegevens in gss_wrap() in SASL-bibliotheek."
 
-msgid ""
-"GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
-"This is most likely due to not having the proper Kerberos key available in /"
-"etc/krb5.keytab on the server."
-msgstr ""
-"GSSAPI fout bij verkrijgen identificatiegegevens in gss_acquire_cred() in "
-"SASL-bibliotheek.  Dit komt waarschijnlijk door het niet hebben van een "
-"juiste Kerberos-sleutel in /etc/krb5.keytab op de server."
+msgid "GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  This is most likely due to not having the proper Kerberos key available in /etc/krb5.keytab on the server."
+msgstr "GSSAPI fout bij verkrijgen identificatiegegevens in gss_acquire_cred() in SASL-bibliotheek.  Dit komt waarschijnlijk door het niet hebben van een juiste Kerberos-sleutel in /etc/krb5.keytab op de server."
 
-#, fuzzy
-msgid ""
-"GSSAPI error creating a display name denoting the client in gss_display_name"
-"() in SASL library.  This is probably because the client supplied bad data."
-msgstr ""
-"GSSAPI fout bij maken weergegeven naam voor client in gss_display_name() in "
-"SASL-bibliotheek.  Dit komt waarschijnlijk door het geven van slechte "
-"gegevens door de client."
+msgid "GSSAPI error creating a display name denoting the client in gss_display_name() in SASL library.  This is probably because the client supplied bad data."
+msgstr "GSSAPI-fout bij maken weergavenaam voor client in gss_display_name() in SASL-bibliotheek.  Waarschijnlijk heeft de client slechte gegevens opgegeven."
 
-msgid ""
-"Other entity requested integrity or confidentiality protection in GSSAPI "
-"mechanism but this is currently not implemented."
-msgstr ""
-"Een andere entiteit verzocht om bescherming van integriteit of "
-"vertrouwelijkheid in GSSAPI-methode maar dat is nog niet geïmplementeerd."
+msgid "Other entity requested integrity or confidentiality protection in GSSAPI mechanism but this is currently not implemented."
+msgstr "Een andere entiteit verzocht om bescherming van integriteit of vertrouwelijkheid in GSSAPI-methode maar dat is nog niet geïmplementeerd."
 
 msgid "SASL mechanism could not parse input"
 msgstr "SASL-methode kon invoer niet verwerken"
 
-#, fuzzy
 msgid "Error authenticating user"
 msgstr "Fout bij authentificatie van gebruiker"
 
@@ -120,46 +74,41 @@ msgid "Integrity error in application payload"
 msgstr "Integriteitsfout in pakketlading toepassing"
 
 msgid "Client-side functionality not available in library (application error)"
-msgstr ""
-"Client-kant functionaliteit niet beschikbaar in bibliotheek (toepassingsfout)"
+msgstr "Client-kant functionaliteit niet beschikbaar in bibliotheek (toepassingsfout)"
 
 msgid "Server-side functionality not available in library (application error)"
-msgstr ""
-"Server-kant functionaliteit niet beschikbaar in bibliotheek (toepassingsfout)"
+msgstr "Server-kant functionaliteit niet beschikbaar in bibliotheek (toepassingsfout)"
 
 msgid "No callback specified by caller (application error)."
-msgstr ""
+msgstr "Geen terugaanroep opgegeven door aanroeper (toepassingsfout)."
 
 msgid "Authentication failed because the anonymous token was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen anoniem token is gegeven."
 
-msgid ""
-"Authentication failed because the authentication identity was not provided."
-msgstr ""
+msgid "Authentication failed because the authentication identity was not provided."
+msgstr "Authentificatie mislukt omdat geen authentificatie identiteit is gegeven."
 
-msgid ""
-"Authentication failed because the authorization identity was not provided."
-msgstr ""
+msgid "Authentication failed because the authorization identity was not provided."
+msgstr "Authentificatie mislukt omdat geen authorisatie identiteit is gegeven"
 
 msgid "Authentication failed because the password was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen wachtwoord is gegeven."
 
 msgid "Authentication failed because the passcode was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen wachtwoord is gegeven."
 
 msgid "Authentication failed because the pin code was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen pincode is gegeven."
 
 msgid "Authentication failed because the service name was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen dienstnaam is gegeven."
 
 msgid "Authentication failed because the host name was not provided."
-msgstr ""
+msgstr "Authentificatie mislukt omdat geen hostnaam is gegeven."
 
 msgid "Could not prepare internationalized (non-ASCII) string."
-msgstr ""
+msgstr "Kon geïnternationaliseerde (niet-ASCII) tekst niet voorbereiden."
 
-#, fuzzy
 msgid "SASL function needs larger buffer (internal error)"
 msgstr "SASL-functie vereist grotere buffer (interne fout)"
 
@@ -172,126 +121,59 @@ msgstr "Kon bestand niet sluiten in SASL-bibliotheek"
 msgid "Cannot get internal library handle (library error)"
 msgstr "Kan interne-bibliotheek-handvat niet opvragen (bibliotheekfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_anonymous() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_anonymous() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_anonymous() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_password() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_password() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_password() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_password() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_passcode() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_passcode() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_passcode() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_passcode() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_pin() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_pin() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_authorization_id() callback "
-"(application error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_authorization_id() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_authorization_id() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_authorization_id() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_authentication_id() callback "
-"(application error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_authentication_id() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_authentication_id() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_authentication_id() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_client_callback_service() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_client_callback_service() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_client_callback_service() callback (application error)"
+msgstr "SASL-methode vereist gsasl_client_callback_service() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_validate() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_validate() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_validate() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_validate() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_cram_md5() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_cram_md5() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_cram_md5() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_digest_md5() callback "
-"(application error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_digest_md5() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_digest_md5() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_digest_md5() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_anonymous() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_anonymous() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_anonymous() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_external() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_external() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_external() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_external() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_realm() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_realm() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_realm() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_realm() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_securid() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_securid() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_securid() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_securid() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_service() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_service() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_service() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_service() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_gssapi() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_gssapi() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_gssapi() terugaanroep (toepassingsfout)"
 
-msgid ""
-"SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
-"error)"
-msgstr ""
-"SASL-methode vereist gsasl_server_callback_retrieve() terugaanroep "
-"(toepassingsfout)"
+msgid "SASL mechanism needs gsasl_server_callback_retrieve() callback (application error)"
+msgstr "SASL-methode vereist gsasl_server_callback_retrieve() terugaanroep (toepassingsfout)"
 
 msgid "Failed to perform Unicode Normalization on string."
-msgstr ""
+msgstr "Unicode-normalisatie mislukt op tekst."
 
 #, fuzzy
 msgid "No more realms available (non-fatal)"
@@ -301,4 +183,4 @@ msgid "The provided library handle was invalid (application error)"
 msgstr "Het gegeven bibliotheekhandvat was ongeldig (toepassingsfout)"
 
 msgid "Libgsasl unknown error"
-msgstr "Onbekende Libgsasl fout"
+msgstr "Onbekende Libgsasl-fout"
