--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 GNU SASL THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
 See the end for copying conditions.
 
 GNU SASL uses libntlm by Grant Edwards maintained by Simon Josefsson;
@@ -24,6 +24,7 @@ Mike Castle
 Martin Lambers
 Clytie Siddall
 Ryan Slack
+Yvan Bassuel
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
