--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ Martin Lambers
 Clytie Siddall
 Ryan Slack
 Yvan Bassuel
+Francis Brosnan Blazquez
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
