--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 0.2.12 (unreleased)
 
+** Add -no-undefined to libtool command, to build DLL and import library on Mingw32.
+Reported by Francis Brosnan Blazquez <francis@aspl.es>.
+
 ** API and ABI modifications.
 No changes since last version.
 
